Still working on misalignment issue and realized prices are sorted alphabetically, not numerically

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -165,8 +165,8 @@
 
 .next {
   background-color: #2a475e;
-  min-height: 15vh;
-  min-width: 45vh;
+  min-height: 10vh;
+  min-width: 40vh;
   font-size: 1.5em;
   margin-left: 75px;
   margin-bottom: 30px;
